--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -24,45 +26,48 @@
       </div>
     </div>
   </nav>
-  
+ 
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      At Best Cars Dealership, we offer exceptional value with every purchase. Enjoy limited time discounts up to $5.000, flexible financing options, generous trade-in bonuses, and complimentary extended warranties and maintenance packages. Visit us today to explore these unbeatable deals and drive away in your dream car
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/john.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">John</p>
+          <p>Sales Manager</p>
+          <p class="card-text">Results driven Sales Manager excelling in targets, team leadership, and strategic initiatives</p>
+          <p>John@eg.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/sam.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Sam</p>
+          <p>Service Advisor</p>
+          <p class="card-text">Experienced Service Advisor skilled in vehicle maintenance, service scheduling, and customer issue resolution</p>
+          <p>Sam@eg.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/chris.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Chris</p>
+          <p>General Manager</p>
+          <p class="card-text">Seasoned General Manager skilled in driving success, optimizing operations, and leading teams to achieve goals</p>
+          <p>Chris@eg.com</p>
         </div>
       </div>
     </div>
     </div>
     </div>
-    
+   
 </div>
 
 </html>
+
